<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".home"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="9dp">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="75dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/whitebg" />

    <TextView
        android:id="@+id/Head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="55dp"
        android:text="@string/Head"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/adminFn"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/Lfntxt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="21dp"
        android:background="@drawable/custom"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/adminPass"
        app:layout_constraintEnd_toEndOf="@+id/passtxt"
        app:layout_constraintStart_toStartOf="@+id/adminFn"
        app:layout_constraintTop_toBottomOf="@+id/adminFn" />

    <TextView
        android:id="@+id/adminFn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="9dp"
        android:backgroundTint="@color/black"
        android:text="@string/fn"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/Lfntxt"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/Head" />

    <TextView
        android:id="@+id/adminPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/pass"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/passtxt"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/Lfntxt" />

    <TextView
        android:id="@+id/botText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:text="@string/botText"
        android:textColor="@color/amazonblue"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/updatecardbtn"
        app:layout_constraintStart_toStartOf="@+id/passtxt"
        app:layout_constraintTop_toBottomOf="@+id/passtxt" />

    <EditText
        android:id="@+id/passtxt"
        android:layout_width="310dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/botText"
        app:layout_constraintStart_toStartOf="@+id/adminPass"
        app:layout_constraintTop_toBottomOf="@+id/adminPass" />

    <Button
        android:id="@+id/updatecardbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="57dp"
        android:backgroundTint="@color/amazonblue"
        android:text="@string/loginBtn"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/bottext3"
        app:layout_constraintStart_toEndOf="@+id/botText"
        app:layout_constraintTop_toBottomOf="@+id/botText" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="234dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="85dp"
        app:layout_constraintBottom_toTopOf="@+id/Head"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/simplemeds2" />

    <TextView
        android:id="@+id/bottext3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="21dp"
        android:text="@string/botText3"
        app:layout_constraintBottom_toTopOf="@+id/adminbtn"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/updatecardbtn" />

    <Button
        android:id="@+id/adminbtn"
        android:layout_width="134dp"
        android:layout_height="57dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="96dp"
        android:backgroundTint="@color/amazonblue"
        android:text="@string/adminHead"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/reg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottext3" />

    <Button
        android:id="@+id/reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="38dp"
        android:backgroundTint="@color/amazonblue"
        android:text="@string/reg"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/adminbtn"
        app:layout_constraintTop_toBottomOf="@+id/bottext3" />

    <Button
        android:id="@+id/backbtn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/back"
        android:textColor="@color/amazonblue"
        tools:layout_editor_absoluteX="14dp"
        tools:layout_editor_absoluteY="656dp" />

</androidx.constraintlayout.widget.ConstraintLayout>