<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".home">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="84dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoutbtn2"
        app:srcCompat="@drawable/whitebg" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="66dp"
        app:layout_constraintBottom_toTopOf="@+id/homehead"
        app:layout_constraintEnd_toStartOf="@+id/logoutbtn2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/simplemeds2" />

    <TextView
        android:id="@+id/homehead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="53dp"
        android:gravity="center"
        android:text="@string/homehead"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/desc"
        app:layout_constraintStart_toStartOf="@+id/desc"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="256dp"
        android:layout_height="0dp"
        android:layout_marginBottom="89dp"
        android:text="@string/txt1"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homehead" />

    <Button
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/amazonblue"
        android:text="@string/shopbtn"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/remove"
        app:layout_constraintStart_toStartOf="@+id/remove"
        app:layout_constraintTop_toBottomOf="@+id/desc" />

    <Button
        android:id="@+id/managepaybtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="110dp"
        android:backgroundTint="@color/amazonblue"
        android:text="@string/cardmanage"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remove" />

    <Button
        android:id="@+id/remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="11dp"
        android:backgroundTint="@color/amazonblue"
        android:text="@string/profile"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/managepaybtn"
        app:layout_constraintStart_toStartOf="@+id/managepaybtn"
        app:layout_constraintTop_toBottomOf="@+id/update" />

    <Button
        android:id="@+id/logoutbtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="@color/white"
        android:text="@string/logout"
        android:textColor="@color/amazonblue"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>