<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".AddcardActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/whitebg" />

    <TextView
        android:id="@+id/Head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="73dp"
        android:layout_marginBottom="16dp"
        android:text="@string/updatecardhead"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/fn"
        app:layout_constraintStart_toStartOf="@+id/fn"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/fn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="2dp"
        android:layout_marginBottom="6dp"
        android:text="@string/cardnickname"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/nickname"
        app:layout_constraintStart_toStartOf="@+id/nickname"
        app:layout_constraintTop_toBottomOf="@+id/Head" />

    <EditText
        android:id="@+id/nickname"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="13dp"
        android:background="@drawable/custom"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/darkgrey"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/adminPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fn" />

    <TextView
        android:id="@+id/adminPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/cvv"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/cvv"
        app:layout_constraintStart_toStartOf="@+id/nickname"
        app:layout_constraintTop_toBottomOf="@+id/nickname" />

    <EditText
        android:id="@+id/cvv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/custom"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/passConf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminPass" />

    <TextView
        android:id="@+id/passConf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="34dp"
        android:text="@string/carddate"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/carddate"
        app:layout_constraintStart_toStartOf="@+id/cvv"
        app:layout_constraintTop_toBottomOf="@+id/cvv" />

    <EditText
        android:id="@+id/carddate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="62dp"
        android:background="@drawable/custom"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/updatecardbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passConf" />

    <Button
        android:id="@+id/updatecardbtn"
        android:layout_width="108dp"
        android:layout_height="0dp"
        android:layout_marginBottom="231dp"
        android:backgroundTint="@color/amazonblue"
        android:text="@string/updatecard"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carddate" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="173dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/Head"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/simplemeds2" />


</androidx.constraintlayout.widget.ConstraintLayout>